# claude-code-whatsapp

./: .gitignore  LICENSE  Makefile  README.md  SPEC.md  env.example
bridge/: go.mod  main.go
core/: pyproject.toml
core/src/: main.py
core/src/claude/: sdk_integration.py
core/src/config/: settings.py
core/src/whatsapp/: __init__.py  client.py  core.py  models.py  orchestrator.py
core/src/whatsapp/utils/: formatting.py
