[tool.poetry]
name = "claude-code-whatsapp"
version = "0.1.0"
description = "WhatsApp bot for remote access to Claude Code"
authors = ["arktnld"]
license = "MIT"
readme = "README.md"
packages = [{include = "src"}]

[tool.poetry.scripts]
claude-whatsapp = "src.main:run"

[tool.poetry.dependencies]
python = "^3.11"
structlog = "^24.0"
pydantic = "^2.0"
pydantic-settings = "^2.0"
aiohttp = "^3.9"
aiosqlite = "^0.20"
claude-agent-sdk = "^0.1"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0"
pytest-asyncio = "^0.23"
pytest-cov = "^5.0"
black = "^24.0"
isort = "^5.0"
mypy = "^1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100

[tool.isort]
profile = "black"
line_length = 100
